--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.0",
     "express": "^4.18.1",
     "lodash-es": "^4.17.21",
+    "node-fetch": "^3.3.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
