--- a/package.json
+++ b/package.json
@@ -5,20 +5,29 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/microservices": "^10.3.3",
+    "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
     "express": "^4.18.1",
     "lodash-es": "^4.17.21",
     "nanoid": "^5.0.6",
     "node-fetch": "^3.3.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/esbuild": "18.0.4",
     "@nx/eslint": "18.0.4",
     "@nx/eslint-plugin": "18.0.4",
     "@nx/express": "18.0.4",
     "@nx/jest": "18.0.4",
     "@nx/js": "18.0.4",
+    "@nx/nest": "^18.0.4",
     "@nx/node": "18.0.4",
     "@nx/vite": "18.0.4",
     "@nx/web": "18.0.4",
